k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
