k8s/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-tls
  namespace: devsecops
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.local
      secretName: nginx-tls
  rules:
    - host: nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
